# Cornell-Research

./: README.md  cardboard_box0.bt  cardboard_box1.bt  env_2_0.bt  env_2_1.bt  env_2_2.bt  env_2_3.bt  env_2_4.bt  env_2_5.bt  env_2_6.bt  height.world  heightmap.world  sim_overhead_octomap.launch  smore_map.bt  smore_map1.bt  smore_map2.bt  smore_map2.ot  smore_map3.bt  smore_map3.ot  smore_map4.ot  smore_map5.bt  smore_map5.ot  test_cam.launch
LearningPackage/: cnn_characterization_hand.py
SMORE/: SMORE.sdf  model.config
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/pkgconfig/: using_markers.pc
devel/lib/using_markers/: basic_shapes  octomap_kinect
devel/share/using_markers/cmake/: using_markersConfig.cmake
env_classifier_model/: checkpoint  events.out.tfevents.1527883470.asl-desktop  events.out.tfevents.1527883650.asl-desktop  graph.pbtxt  model.ckpt-33352.index  model.ckpt-36715.index  model.ckpt-40077.index  model.ckpt-43442.index  model.ckpt-45002.index
env_classifier_model/eval/: events.out.tfevents.1527889020.asl-desktop
smore_nest/: model.config  smore_nest.sdf  smore_nest_includes.sdf
src/color_tracker/: color_tracker.kdev4
src/color_tracker/src/: .kdev_include_paths  color_tracker.cpp
src/env_characterization/: CMakeLists.txt  env_characterization.kdev4  package.xml
src/env_characterization/.kdev4/: env_characterization.kdev4
src/env_characterization/launch/: characterization_suite.launch  debug_suite.launch
src/env_characterization/msg/: Action.msg  Feature.msg  PathNode.msg  PathNodeArray.msg
src/env_characterization/scripts/: cnn_characterization.py  cnn_characterization_classifier.py  cnn_characterization_hand.py  cnn_characterization_v1.py  cnn_characterization_v2.py  cnn_characterization_v3.py  cnn_orientation.py
src/env_characterization/src/: car_control.cc  dolphin_control.cc  env_characterization.cpp  example_generation.cpp  gazebo_tf.cpp  hand_labelling.cpp  navigation.cpp  sim_handler.cpp  snake_control.cc
src/env_characterization/srv/: action_srv.srv  classify_map.srv  path_srv.srv
src/gazebo_plugin_tutorial/: CMakeLists.txt  Converted_SMORE.urdf  SMORE.sdf  SMORE.urdf.xacro  SMORE_World.world  car_control.cc  gazebo_plugin_tutorial.kdev4  hello_world.cc  master_plugin.cc  model_push.cc  my_robot.urdf  my_robot.urdf.xacro  my_robot.xacro  vel.cc  velodyne.world  velodyne_plugin.cc
src/gazebo_plugin_tutorial/.kdev4/: gazebo_plugin_tutorial.kdev4
src/modules/: CMakeLists.txt  package.xml
src/modules/.kdev4/: modules.kdev4
src/modules/src/: .kdev_include_paths  characterization_srv.cpp  cloud_throttle.cpp  modGrid.cpp  modMap.cpp  navigation_hub.cpp  targeting_srv.cpp  tf_calibration.cpp  youbot_hub.cpp
src/pose_3d/: CMakeLists.txt
src/pose_3d/launch/: ladybug_stack.launch  ladybug_stack.launch~  octomap_experiment.launch  octomap_mapping.launch  youbot.launch  youbot.launch~  youbot_joint_publisher.launch  youbot_joint_state_publisher.launch
src/pose_3d/src/: .pose3d.cpp.kate-swp  cloud_manipulation.cpp  cloud_throttle.cpp  pose3d.cpp  pose_experiment.cpp  pose_youbot.cpp
src/using_markers/: CMakeLists.txt  package.xml
src/using_markers/src/: octomap_kinect.cpp
src/vicon_provider/src/: curMap.bt  errorCalculator.py  frames.gv  kinectPublisher.py  tfFromViconToVisualOdom.py  transformFromViconToRGBDPublisher.py  xtionPublisher.py  youbotPublisher.py
